syntax = "proto3";

package com.coralogixapis.views.v1.services;

import "com/coralogixapis/views/v1/audit_log.proto";
import "com/coralogixapis/views/v1/view_folder.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";

service ViewsFoldersService {
  rpc ListViewFolders(ListViewFoldersRequest) returns (ListViewFoldersResponse) {
    option (audit_log_description).description = "list view's folders";
  }

  rpc GetViewFolder(GetViewFolderRequest) returns (GetViewFolderResponse) {
    option (audit_log_description).description = "get view folder";
  }

  rpc CreateViewFolder(CreateViewFolderRequest) returns (CreateViewFolderResponse) {
    option (audit_log_description).description = "create view folder";
  }

  rpc DeleteViewFolder(DeleteViewFolderRequest) returns (DeleteViewFolderResponse) {
    option (audit_log_description).description = "delete view folder";
  }

  rpc ReplaceViewFolder(ReplaceViewFolderRequest) returns (ReplaceViewFolderResponse) {
    option (audit_log_description).description = "replace view folder";
  }
}

message CreateViewFolderRequest {
  google.protobuf.StringValue name = 1;
}

message CreateViewFolderResponse {
  ViewFolder folder = 1;
}

message GetViewFolderRequest {
  google.protobuf.StringValue id = 1;
}

message GetViewFolderResponse {
  ViewFolder folder = 1;
}

message ListViewFoldersRequest {}

message ListViewFoldersResponse {
  repeated ViewFolder folders = 1;
}

message DeleteViewFolderRequest {
  google.protobuf.StringValue id = 1;
}

message DeleteViewFolderResponse {
}

message ReplaceViewFolderRequest {
  ViewFolder folder = 1;
}

message ReplaceViewFolderResponse {
  ViewFolder folder = 1;
}