syntax = "proto3";

package com.coralogixapis.dashboards.v1.ast;

import "com/coralogixapis/dashboards/v1/common/observation_field.proto";
import "com/coralogixapis/dashboards/v1/common/order_direction.proto";
import "com/coralogixapis/dashboards/v1/common/span_field.proto";
import "google/protobuf/wrappers.proto";

message Variable {
  google.protobuf.StringValue name = 1;
  Definition definition = 2;
  google.protobuf.StringValue display_name = 3;
  google.protobuf.StringValue description = 4;
  VariableDisplayType display_type = 5;

  message Definition {
    oneof value {
      Constant constant = 1 [deprecated = true];
      MultiSelect multi_select = 2;
    }
  }
}

enum VariableDisplayType {
  VARIABLE_DISPLAY_TYPE_UNSPECIFIED = 0;
  VARIABLE_DISPLAY_TYPE_LABEL_VALUE = 1;
  VARIABLE_DISPLAY_TYPE_VALUE = 2;
  VARIABLE_DISPLAY_TYPE_NOTHING = 3;
}

message Constant {
  google.protobuf.StringValue value = 1;
}

message MultiSelect {
  repeated google.protobuf.StringValue selected = 1 [deprecated = true];
  Source source = 2;
  Selection selection = 3;
  v1.common.OrderDirection values_order_direction = 4;
  VariableSelectionOptions selection_options = 5;

  message Source {
    oneof value {
      LogsPathSource logs_path = 1;
      MetricLabelSource metric_label = 2;
      ConstantListSource constant_list = 3;
      SpanFieldSource span_field = 4;
      QuerySource query = 5;
    }
  }

  message LogsPathSource {
    google.protobuf.StringValue value = 1;
    v1.common.ObservationField observation_field = 3;
  }

  message MetricLabelSource {
    google.protobuf.StringValue metric_name = 1;
    google.protobuf.StringValue label = 2;
  }

  message SpanFieldSource {
    common.SpanField value = 1;
  }

  message ConstantListSource {
    repeated google.protobuf.StringValue values = 1;
  }

  message QuerySource {
    Query query = 1;
    RefreshStrategy refresh_strategy = 2;
    ValueDisplayOptions value_display_options = 3;
  }

  message Query {
    oneof value {
      LogsQuery logs_query = 1;
      MetricsQuery metrics_query = 2;
      SpansQuery spans_query = 3;
    }

    message LogsQuery {
      Type type = 1;

      message Type {
        oneof value {
          FieldName field_name = 1;
          FieldValue field_value = 2;
        }

        message FieldName {
          google.protobuf.StringValue log_regex = 1;
        }

        message FieldValue {
          v1.common.ObservationField observation_field = 3;
        }
      }
    }

    message SpansQuery {
      Type type = 1;

      message Type {
        oneof value {
          FieldName field_name = 1;
          FieldValue field_value = 2;
        }

        message FieldName {
          google.protobuf.StringValue span_regex = 1;
        }

        message FieldValue {
          common.SpanField value = 1;
        }
      }
    }

    message MetricsQuery {
      Type type = 1;

      message Type {
        oneof value {
          MetricName metric_name = 1;
          LabelName label_name = 2;
          LabelValue label_value = 3;
        }

        message MetricName {
          google.protobuf.StringValue metric_regex = 1;
        }

        message LabelName {
          google.protobuf.StringValue metric_regex = 1;
        }

        message LabelValue {
          StringOrVariable metric_name = 1;
          StringOrVariable label_name = 2;
          repeated MetricsLabelFilter label_filters = 3;
        }
      }

      message StringOrVariable {
        oneof value {
          google.protobuf.StringValue string_value = 1;
          google.protobuf.StringValue variable_name = 2;
        }
      }

      message MetricsLabelFilter {
        StringOrVariable metric = 1;
        StringOrVariable label = 2;
        Operator operator = 3;
      }

      message Operator {
        oneof value {
          Equals equals = 1;
          NotEquals not_equals = 2;
        }
      }

      message Equals {
        Selection selection = 1;
      }
      message NotEquals {
        Selection selection = 1;
      }
      message Selection {
        oneof value {
          ListSelection list = 1;
        }
        message ListSelection {
          repeated StringOrVariable values = 1;
        }
      }
    }
  }

  enum RefreshStrategy {
    REFRESH_STRATEGY_UNSPECIFIED = 0;
    REFRESH_STRATEGY_ON_DASHBOARD_LOAD = 1;
    REFRESH_STRATEGY_ON_TIME_FRAME_CHANGE = 2;
  }

  message ValueDisplayOptions {
    google.protobuf.StringValue value_regex = 1;
    google.protobuf.StringValue label_regex = 2;
  }

  message Selection {
    oneof value {
      AllSelection all = 1;
      ListSelection list = 2;
    }
    message AllSelection {}
    message ListSelection {
      repeated google.protobuf.StringValue values = 1;
      repeated google.protobuf.StringValue labels = 2;
    }
  }

  message VariableSelectionOptions {
    SelectionType selection_type = 1;

    enum SelectionType {
      SELECTION_TYPE_UNSPECIFIED = 0;
      SELECTION_TYPE_MULTI_ALL = 1;
      SELECTION_TYPE_MULTI = 2;
      SELECTION_TYPE_SINGLE = 3;
    }
  }
}
